--- a/user/cart.html
+++ b/user/cart.html
@@ -4,53 +4,54 @@
         <meta charset="UTF-8"/>
         <title> Virtuose - Carrinho </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
     </head>
-
     <body>
         <!-- Header -->
         <header class = "mainHeader">
             <!-- Aba de Navegação -->
             <nav class="navBar">
                 <ul class="conteiner">
-                    <li><a href="homePage.html"><img src="icons/logo.svg" class="logo" alt="Logo"/></a></li>               
+                    <li><a href="homePage.html"><img src="icons/logo.svg" class="logo" alt="Logo da Vituose"/></a></li>
                     <li>
                         <form class="searchBar"> 
                             <input type="search" placeholder="Procurar"/>
-                            <a><img src="icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa"></a>
+                            <a href="#"><img src="icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa"/></a>
                         </form>
                     </li>
                     <li>
                         <ul class="navIcons">
-                            <li><a href=""><img src="icons/navBarIcons/infoIcon.svg" alt="Ícone de informação"/> Sobre Nós </a></li>
+                            <li><a href="aboutUs.html"><img src="icons/navBarIcons/infoIcon.svg" alt="Ícone de informação"/> Sobre Nós </a></li>
                             <li><a href="products.html"><img src="icons/navBarIcons/productsIcon.svg" alt="Ícone de produtos"/> Produtos </a></li>
                             <li><a href="cart.html"><img src="icons/navBarIcons/cartIcon.svg" alt="Ícone de carrinho"/> Carrinho </a></li>
-                            <li><a href="login.html"><img src="icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil"/> Sua conta </a></li>
+                            <li><a href="account.html"><img src="icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil"/> Sua conta </a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
         </header>
-
         <main class="mainCart">
+            <!-- Carrinho de compras  -->
             <section class="shoppingCart">
                 <h2 class="titlePages"> Carrinho de Compras </h2>
                 <article class="cartItem">
                     <figure class="conteinerImage">
-                        <img src="src/telaHome/violao01.png" class="productImageCart"/>
+                        <img src="src/telaHome/violao01.png" class="productImageCart" alt="Imagem do produto Violão Acustico California Vintage"/>
                     </figure>
                     <article class="itemDetails">
-                        <div class="articlesHeader">
-                            <h3 class="itemInfo"> Vilão Acustico California Vintage </h3>
+                        <article class="articlesHeader">
+                            <h3 class="itemInfo"> Violão Acustico California Vintage </h3>
                             <p class="itemInfo"> R$ 867,90 </p>
-                        </div>
-                        <div class="itemControls">
+                        </article>
+                        <div class="itemControls"> <!-- "div" utilizada para o posicionamento do seletor -->
                             <ul class="qtdSelector">
                                 <li> <button> - </button> </li>
-                                <li> <p> 1 </p> </li>
+                                <li>
+                                    <p> 1 </p>
+                                </li>
                                 <li> <button> + </button> </li>
                             </ul>
                             <ul class="itemActions">
@@ -58,21 +59,23 @@
                                 <li> <a href="#"> Favoritar </a> </li>
                             </ul>
                         </div>
-                    </article> 
+                    </article>
                 </article>
                 <article class="cartItem">
                     <figure class="conteinerImage">
-                        <img src="src/telaHome/violao01.png" class="productImageCart"/>
+                        <img src="src/telaProduto02/baixoFrente.png" class="productImageCart" alt="Imagem do produto Baixo American Ultra II"/>
                     </figure>
                     <article class="itemDetails">
-                        <div class="articlesHeader">
+                        <article class="articlesHeader">
                             <h3 class="itemInfo"> Baixo American Ultra II </h3>
                             <p class="itemInfo"> R$ 1.090,90 </p>
-                        </div>
-                        <div class="itemControls">
+                        </article>
+                        <div class="itemControls"> <!-- "div" utilizada para o posicionamento do seletor -->
                             <ul class="qtdSelector">
                                 <li> <button> - </button> </li>
-                                <li> <p> 1 </p> </li>
+                                <li>
+                                    <p> 1 </p>
+                                </li>
                                 <li> <button> + </button> </li>
                             </ul>
                             <ul class="itemActions">
@@ -80,21 +83,23 @@
                                 <li> <a href="#"> Favoritar </a> </li>
                             </ul>
                         </div>
-                    </article> 
-                </article>              
+                    </article>
+                </article>
                 <article class="cartItem">
                     <figure class="conteinerImage">
-                        <img src="src/telaHome/violao01.png" class="productImageCart"/>
+                        <img src="src/telaProduto03/ukuleleFrente.png" class="productImageCart" alt="Imagem do produto Ukulele Soprano Venice"/>
                     </figure>
                     <article class="itemDetails">
-                        <div class="articlesHeader">
+                        <article class="articlesHeader">
                             <h3 class="itemInfo"> Ukulele Soprano Venice </h3>
-                            <p class="itemInfo"> R$ 587,00 </p>
-                        </div>
-                        <div class="itemControls">
+                            <p class="itemInfo"> R$ 587,90 </p>
+                        </article>
+                        <div class="itemControls"><!-- "div" utilizada para o posicionamento do seletor -->
                             <ul class="qtdSelector">
                                 <li> <button> - </button> </li>
-                                <li> <p> 2 </p> </li>
+                                <li>
+                                    <p> 2 </p>
+                                </li>
                                 <li> <button> + </button> </li>
                             </ul>
                             <ul class="itemActions">
@@ -102,42 +107,40 @@
                                 <li> <a href="#"> Favoritar </a> </li>
                             </ul>
                         </div>
-                    </article> 
-                </article>
+                    </article>
                 </article>
             </section>
-
             <aside class="orderSummary">
                 <h3 class="titlePages"> Resumo da Compra </h3>
-                <hr class="gapLine"/> 
-                <div class="articlesHeader">
-                    <h3> Subtotal </h3>
+                <hr class="gapLine"/>
+                <article class="articlesHeader">
+                    <h3> Subtotal: </h3>
                     <p class="subtotalPrice"> R$ 2.632,80 </p>
-                </div>
+                </article>
                 <a href="checkOut.html" class="primaryButton"> Fechar Pedido </a>
+                <hr class="gapLine"/>
             </aside>
         </main>
-
         <!-- Footer -->
         <footer class="footer">
             <div class = "linksFooter"> <!-- "div" utilizada para definir e delimitar o espaço dos links no footer -->
-                <article class = "links">
+                <article class = "links"> <!-- Links do footer, o usuário pode navegar para certas páginas através deles -->
                     <h4> Produtos </h4>
                     <div class = "productsLinks"> <!-- "div" utilizada para separar a lista em dois espaços diferentes-->
                         <div> <!-- "div" usada para alinhamento -->
                             <ul>
-                                <li><a href="#"> Violões </a></li>
-                                <li><a href="#"> Guitarras </a></li>
-                                <li><a href="#"> Baixos </a></li>
-                                <li><a href="#"> Ukuleles </a></li>
+                                <li><a href="products.html"> Violões </a></li>
+                                <li><a href="products.html"> Guitarras </a></li>
+                                <li><a href="products.html"> Baixos </a></li>
+                                <li><a href="products.html"> Ukuleles </a></li>
                             </ul>
                         </div>
                         <div> <!-- "div" usada para alinhamento -->
-                            <ul>    
-                                <li><a href="#"> Baterias </a></li>
-                                <li><a href="#"> Violinos </a></li>
-                                <li><a href="#"> Teclados </a></li>
-                                <li><a href="#"> Acessórios </a></li>
+                            <ul>
+                                <li><a href="products.html"> Baterias </a></li>
+                                <li><a href="products.html"> Violinos </a></li>
+                                <li><a href="products.html"> Teclados </a></li>
+                                <li><a href="products.html"> Acessórios </a></li>
                             </ul>
                         </div>
                     </div>
@@ -145,31 +148,29 @@
                 <article class = "links">
                     <h4> Institucional </h4>
                     <ul>
-                        <li><a href="#"> Sobre nós </a></li>
-                        <li><a href="#"> Fale conosco </a></li>
-                        <li><a href="#"> Dúvidas </a></li>
-                        <li><a href="#"> Politica de privacidade </a></li>
+                        <li><a href="aboutUs.html"> Sobre nós </a></li>
+                        <li><a href="callCenter.html"> Fale conosco </a></li>
+                        <li><a href="callCenter.html"> Dúvidas </a></li>
                     </ul>
                 </article>
                 <article class = "links">
                     <h4> Conta </h4>
                     <ul>
-                        <li><a href="#"> Minha conta </a></li>
-                        <li><a href="#"> Pedidos </a></li>
+                        <li><a href="account.html"> Minha conta </a></li>
+                        <li><a href="accountOrders.html"> Pedidos </a></li>
                     </ul>
                 </article>
             </div>
             <hr class="footerLine"/>
             <section class="copyright">
                 <ul>
-                    <li><a href="#"> Política de Privacidade </a></li>
-                    <li><a href="#"> Termos e Condições </a></li>
-                    <li><a href="#"> Acessibilidade </a></li>
-                    <li><a href="#"> Contato </a></li>
+                    <li><a href="accountPrivacy.html"> Política de Privacidade </a></li>
+                    <li><a href="accountPrivacy.html"> Termos e Condições </a></li>
+                    <li><a href="accountPrivacy.html"> Acessibilidade </a></li>
+                    <li><a href="callCenter.html"> Contato </a></li>
                 </ul>
                 <h3> Copyright @2025 Samuel Miller Soares. Todos os direitos reservados </h3>
             </section>
         </footer>
-
     </body>
 </html>
